refactor(💻): adecuate repo-template
SCOPE: DevEnv
WHY: To have repo ready for the milpa project.

- add new LICENSE.txt
- update devbox packages
- configure goodcommit for milpa

🦔

Signed-off-by: Rolando Sotelo <rola@hey.com>

--- a/.repo/manifest.json
+++ b/.repo/manifest.json
@@ -1,6 +1,6 @@
 {
-    "license": "UNLICENSED",
-    "orgName": "nantli",
-    "repoDescription": "This is a repository template for nantli projects",
-    "repoName": "repo-template"
+    "license": "MIT",
+    "orgName": "rolasotelo",
+    "repoDescription": "Milpa - online card game",
+    "repoName": "milpa"
 }
