--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-  "name": "milpa",
-  "version": "1.0.0",
-  "description": "Milpa - online card game",
-  "main": "index.ts",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "repository": {
-    "type": "git",
-    "url": "github.com/rolasotelo/milpa"
-  },
-  "keywords": [
-    "nextjs",
-    "websockets",
-    "tailwindcss"
-  ],
-  "author": "Rolando Sotelo (rola@hey.com)",
-  "license": "MIT",
-  "dependencies": {
-    "next": "^15.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "22.9.0",
-    "@types/react": "18.3.12",
-    "eslint": "9.15.0",
-    "eslint-config-next": "15.0.3",
-    "typescript": "5.6.3"
-  }
+    "author": "Rolando Sotelo (rola@hey.com)",
+    "dependencies": {
+        "@typescript-eslint/eslint-plugin": "^8.14.0",
+        "@typescript-eslint/parser": "^8.14.0",
+        "next": "^15.0.3",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "description": "Milpa - online card game",
+    "devDependencies": {
+        "@types/node": "22.9.0",
+        "@types/react": "18.3.12",
+        "autoprefixer": "^10.4.20",
+        "eslint": "9.15.0",
+        "eslint-config-next": "15.0.3",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.15",
+        "typescript": "5.6.3"
+    },
+    "keywords": [
+        "nextjs",
+        "websockets",
+        "tailwindcss"
+    ],
+    "license": "MIT",
+    "main": "index.ts",
+    "name": "milpa",
+    "repository": {
+        "type": "git",
+        "url": "github.com/rolasotelo/milpa"
+    },
+    "scripts": {
+        "build": "next build",
+        "dev": "next dev",
+        "lint": "next lint",
+        "start": "next start"
+    },
+    "version": "1.0.0"
 }
