--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,5 +2,4 @@
 FROM mcr.microsoft.com/devcontainers/universal:2
 
 # Install Devbox and other dependencies
-RUN curl -fsSL https://get.jetify.com/devbox | bash -s -- -f && \
-    devbox setup nix
+RUN curl -fsSL https://get.jetify.com/devbox | bash -s -- -f
