--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,5 @@
 {
-    "$schema": "http://json-schema.org/draft-07/schema#",
-    "name": "Devbox with devcontainers",
-    "build": {
-        "dockerfile": "Dockerfile"
-    },
-    "postCreateCommand": "devbox install"
+  "$schema": "http://json-schema.org/draft-07/schema#",
+  "name": "Devbox with devcontainers",
+  "onCreateCommand": "curl -fsSL https://get.jetify.com/devbox | bash -s -- -f && devbox setup nix && devbox install"
 }
