--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,6 @@
 {
-    "extends": [
-        "next/core-web-vitals",
-        "next/typescript"
-    ],
-    "rules": {
-        "@typescript-eslint/no-unused-expressions": "off"
-    }
+  "extends": ["next/core-web-vitals", "next/typescript", "prettier"],
+  "rules": {
+    "@typescript-eslint/no-unused-expressions": "off"
+  }
 }
