--- a/.repo/.pre-commit-config.yaml
+++ b/.repo/.pre-commit-config.yaml
@@ -2,29 +2,38 @@
 # See https://pre-commit.com/hooks.html for more hooks
 default_install_hook_types: [commit-msg]
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-added-large-files
-    -   id: check-case-conflict
-    -   id: check-executables-have-shebangs
-    -   id: detect-private-key
-    -   id: pretty-format-json
-        args: [--autofix, --indent, '4']
-    -   id: check-yaml
-    -   id: check-json
-    # -   id: no-commit-to-branch
-    #     args: [--branch, main]
-- repo: https://github.com/Lucas-C/pre-commit-hooks
-  rev: v1.5.5
-  hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-added-large-files
+      - id: check-case-conflict
+      - id: check-executables-have-shebangs
+      - id: detect-private-key
+      - id: check-yaml
+      - id: check-json
+      - id: no-commit-to-branch
+        args: [--branch, main]
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.5.5
+    hooks:
       - id: forbid-crlf
       - id: remove-crlf
       - id: forbid-tabs
       - id: remove-tabs
--   repo: https://github.com/jorisroovers/gitlint
-    rev:  v0.19.1
+  - repo: https://github.com/jorisroovers/gitlint
+    rev: v0.19.1
     hooks:
-        -   id: gitlint
+      - id: gitlint
+  - repo: https://github.com/thlorenz/doctoc
+    rev: v2.2.0
+    hooks:
+      - id: doctoc # add <!-- DOCTOC SKIP --> to skip a file
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.3.0
+    hooks:
+      - id: codespell
+        args: [--toml, .repo/typescript-codespell.toml]
+        additional_dependencies:
+          - tomli
