--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-    "author": "Rolando Sotelo (rola@hey.com)",
-    "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^8.14.0",
-        "@typescript-eslint/parser": "^8.14.0",
-        "next": "^15.0.3",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
-    },
-    "description": "Milpa - online card game",
-    "devDependencies": {
-        "@types/node": "22.9.0",
-        "@types/react": "18.3.12",
-        "autoprefixer": "^10.4.20",
-        "eslint": "9.15.0",
-        "eslint-config-next": "15.0.3",
-        "postcss": "^8.4.49",
-        "tailwindcss": "^3.4.15",
-        "typescript": "5.6.3"
-    },
-    "keywords": [
-        "nextjs",
-        "websockets",
-        "tailwindcss"
-    ],
-    "license": "MIT",
-    "main": "index.ts",
-    "name": "milpa",
-    "repository": {
-        "type": "git",
-        "url": "github.com/rolasotelo/milpa"
-    },
-    "scripts": {
-        "build": "next build",
-        "dev": "next dev",
-        "lint": "next lint",
-        "start": "next start"
-    },
-    "version": "1.0.0"
+  "author": "Rolando Sotelo (rola@hey.com)",
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "description": "Milpa - online card game",
+  "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "autoprefixer": "^10.4.20",
+    "eslint": "9.15.0",
+    "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.49",
+    "prettier": "3.3.3",
+    "tailwindcss": "^3.4.15",
+    "typescript": "5.6.3"
+  },
+  "keywords": [
+    "nextjs",
+    "websockets",
+    "tailwindcss"
+  ],
+  "license": "MIT",
+  "main": "index.ts",
+  "name": "milpa",
+  "repository": {
+    "type": "git",
+    "url": "github.com/rolasotelo/milpa"
+  },
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "version": "1.0.0"
 }
