--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,29 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "baseUrl": "src/",
-        "esModuleInterop": true,
-        "incremental": true,
-        "isolatedModules": true,
-        "jsx": "preserve",
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "esnext"
-        ],
-        "module": "esnext",
-        "moduleResolution": "node",
-        "noEmit": true,
-        "paths": {
-            "@/components/*": [
-                "components/*"
-            ],
-            "@/styles/*": [
-                "styles/*"
-            ]
-        },
-        "plugins": [
-            {
-                "name": "next"
-            }
-        ],
-        "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "strict": false,
-        "target": "ES2017"
+  "compilerOptions": {
+    "allowJs": true,
+    "baseUrl": "src/",
+    "esModuleInterop": true,
+    "incremental": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/styles/*": ["styles/*"]
     },
-    "exclude": [
-        "node_modules"
+    "plugins": [
+      {
+        "name": "next"
+      }
     ],
-    "include": [
-        "next-env.d.ts",
-        ".next/types/**/*.ts",
-        "**/*.ts",
-        "**/*.tsx"
-    ]
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "target": "ES2017"
+  },
+  "exclude": ["node_modules"],
+  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"]
 }
