feat: add jumbobox to home page
WHY: To have a pretty call to action.

Update menu with new button functionality, plus
add jumbo box with play button.

🦔

Signed-off-by: Rolando Sotelo <rola@hey.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,6 +11,7 @@ tasks:
     cmds:
       - echo "🔩・Committing changes"
       - pre-commit run --all-files
+      - npm run lint
       - goodcommit
       - echo "Done 🪇"
     silent: true
