--- a/.repo/.pre-commit-config.yaml
+++ b/.repo/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-added-large-files
+        args: ['--maxkb=879']
       - id: check-case-conflict
       - id: check-executables-have-shebangs
       - id: detect-private-key
