--- a/.repo/typescript-codespell.toml
+++ b/.repo/typescript-codespell.toml
@@ -3,4 +3,4 @@
 builtin = "clear,rare,informal,usage,code,names"
 #ignore-words-list = ["uint"]
 #skip=[ "./.*","codespell_lib/data/*","codespell_lib/tests/*"]
-skip="./.*,node_modules/,.next/,.devbox/,.venv/,devbox.lock,package-lock.json,.repo/typescript-codespell.toml"
+skip="./.*,node_modules/*,.next/*,.devbox/*,.venv/*,devbox.lock,package-lock.json,.repo/typescript-codespell.toml,public/*"
